[package]
name = "lichen-rpl"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "RPL routing protocol engine for LICHEN (RFC 6550, Non-Storing Mode)."

[features]
default = []
std = []

[dependencies]
lichen-core = { path = "../lichen-core" }

[dev-dependencies]
# Integration tests need std for HashMap-based state machines
lichen-rpl = { path = ".", features = ["std"] }
