[package]
name = "lichen-rpl"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "RPL routing protocol engine for LICHEN (RFC 6550, Non-Storing Mode)."

[features]
default = []
std = ["dep:lichen-hal", "lichen-hal/std", "dep:lichen-link", "lichen-link/std", "lichen-link/schnorr", "dep:sha2"]
# Logging: enable one or neither, not both
defmt = ["dep:defmt", "lichen-core/defmt"]
log = ["dep:log", "lichen-core/log"]

[dependencies]
lichen-core = { path = "../lichen-core" }
lichen-hal = { path = "../lichen-hal", optional = true }
lichen-link = { path = "../lichen-link", optional = true }
sha2 = { version = "0.11", default-features = false, optional = true }

# Logging backends (optional, feature-gated)
defmt = { version = "0.3", optional = true }
log = { version = "0.4", default-features = false, optional = true }

[dev-dependencies]
# Integration tests need std for HashMap-based state machines
lichen-rpl = { path = ".", features = ["std"] }
serde_json = "1.0"
