[package]
name = "lichen-schc"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "SCHC header compression (RFC 8724): rule model and compress/decompress stubs."

[features]
# Consistent with workspace: no default features. Use `default-features = false`
# for no_std embedded builds. Explicitly enable `std` when needed.
default = []
std = []
# Logging: enable one or neither, not both
defmt = ["dep:defmt", "lichen-core/defmt"]
log = ["dep:log", "lichen-core/log"]

[dependencies]
lichen-core = { path = "../lichen-core" }

# Logging backends (optional, feature-gated)
defmt = { version = "0.3", optional = true }
log = { version = "0.4", default-features = false, optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[[test]]
name = "fragmentation"
required-features = ["std"]
