[package]
name = "lichen-sim"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "LICHEN simulator TCP client (mirrors the Python SimRadio interface)."

[features]
default = []
# Logging: propagates to dependencies
log = ["dep:log", "lichen-node/log"]

[dependencies]
# Logging backend (optional, feature-gated)
log = { version = "0.4", default-features = false, optional = true }
lichen-node = { path = "../lichen-node", features = ["std"] }
tokio = { version = "1", features = ["net", "io-util"] }
