[package]
name = "lichen-tui"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "LICHEN terminal user interface — ratatui dashboard for mesh nodes."

[[bin]]
name = "lichen-tui"
path = "src/main.rs"

[dependencies]
lichen-core = { path = "../lichen-core" }

ciborium  = "0.2"
clap      = { version = "4", features = ["derive", "env"] }
ratatui   = "0.29"
crossterm = "0.28"
tokio     = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
